--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:10.0-browsers
+      - image: circleci/node:latest
     steps:
       - checkout
       - run:
@@ -12,13 +12,14 @@ jobs:
           name: Compile
           command: npm run compile
       - run:
-          name: Package extension
-          command: |
-            npm install -g vsce
-            vsce publish
+          name: install VS Code Extension Manager
+          command: npm i vsce -g
+      - run:
+          name: publish to marketplace
+          command: vsce publish -p $VSTOKEN
 
 workflows:
-  deploy:
+  build-deploy:
     jobs:
       - build:
           name: build
