--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
 	"name": "vscode-whatthecommit",
 	"displayName": "WhatTheCommit",
 	"description": "Fetch your next commit message from WhatTheCommit.com",
-	"version": "0.0.1",
+	"version": "$CIRCLE_TAG",
 	"publisher": "Gaardsholt",
-	"repository": {"url": "https://github.com/Gaardsholt/vscode-whatthecommit"},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Gaardsholt/vscode-whatthecommit"
+	},
+	"icon": "resources/images/icon.png",
+	"homepage": "https://github.com/Gaardsholt/vscode-whatthecommit/blob/master/README.md",
+	"bugs": {
+		"url": "https://github.com/Gaardsholt/vscode-whatthecommit/issues"
+	},
 	"engines": {
 		"vscode": "^1.38.0"
 	},
