--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
       - vsce_publish
 
 workflows:
-  tester:
+  test-deploy:
     jobs:
       - test:
           name: test
@@ -85,9 +85,7 @@ workflows:
             branches:
               only: master
             tags:
-              ignore: /^(\*|\d+(\.\d+){0,2}(\.\*)?)$/
-  build-deploy:
-    jobs:
+              ignore: /.*/
       - build:
           name: build
           filters:
