--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
           command: |
             if [[ ! -z ${CIRCLE_TAG} ]];
             then
-              sed -i -e "s?1.0.0?$CIRCLE_TAG?g" ./package_var.json
+              sed -i -e "s?1.0.0?$CIRCLE_TAG?g" ./package.json
               mv ./package_var.json ./package.json
             fi
   install_dependencies:
