--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   node_image:
     docker:
-      - image: cimg/node
+      - image: cimg/node:current
 
 commands:
   update_version:
