--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
 	"devDependencies": {
 		"@types/node": "14.14.7",
 		"typescript": "4.0.5",
-		"@types/vscode": "1.51.0"
+		"@types/vscode": "^1.50.0"
 	}
 }
