--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
 		"watch": "tsc -watch -p ./"
 	},
 	"devDependencies": {
-		"@types/node": "14.14.9",
-		"typescript": "4.1.2",
+		"@types/node": "^14.14.9",
+		"typescript": "^4.1.2",
 		"@types/vscode": "^1.50.0"
 	}
 }
