--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
 	],
 	"activationEvents": [
 		"*",
-    "onFileSystem:git"
+		"onFileSystem:git"
 	],
 	"main": "./out/extension.js",
-	"extensionDependencies": ["vscode.git"],
+	"extensionDependencies": [
+		"vscode.git"
+	],
 	"contributes": {
 		"commands": [
 			{
@@ -55,8 +57,8 @@
 		"watch": "tsc -watch -p ./"
 	},
 	"devDependencies": {
-		"@types/node": "^14.14.31",
+		"@types/node": "^14.14.35",
 		"typescript": "^4.2.3",
-		"@types/vscode": "^1.53.0"
+		"@types/vscode": "^1.54.0"
 	}
 }
