--- a/package.json
+++ b/package.json
@@ -54,11 +54,14 @@
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./"
+		"watch": "tsc -watch -p ./",
+		"package": "yes | vsce package",
+		"deploy": "vsce deploy"
 	},
 	"devDependencies": {
 		"@types/node": "^16.11.1",
+		"@types/vscode": "^1.60.0",
 		"typescript": "^4.4.3",
-		"@types/vscode": "^1.60.0"
+		"vsce": "^2.6.2"
 	}
 }
