--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"onFileSystem:git"
 	],
 	"main": "./out/extension.js",
+	"browser": "./out/extension.js",
 	"extensionDependencies": [
 		"vscode.git"
 	],
@@ -59,9 +60,9 @@
 		"deploy": "vsce deploy"
 	},
 	"devDependencies": {
-		"@types/node": "^16.11.1",
+		"@types/node": "^17.0.35",
 		"@types/vscode": "^1.60.0",
-		"typescript": "^4.5.4",
+		"typescript": "^4.6.4",
 		"vsce": "^2.8.0"
 	}
 }
