--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"package": "yes | vsce package",
-		"deploy": "vsce deploy"
+		"deploy": "vsce publish --allow-star-activation"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.35",
