--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ commands:
       - run:
           name: Compile
           command: npm run compile
+      - run:
+          name: Compile web
+          command: npm run compile-web
   vsce_package:
     description: Package vscode extension
     steps:
