--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
 		"webpack-cli": "^4.10.0"
 	},
 	"dependencies": {
-		"stream-http": "^3.2.0",
+		"https-browserify": "^1.0.0",
 		"url": "^0.11.0"
 	}
 }
