--- a/.github/workflows/auto-releaser.yml
+++ b/.github/workflows/auto-releaser.yml
@@ -5,8 +5,8 @@ on:
   workflow_dispatch:
   # Or on a schedule
   schedule:
-    # run every monday at 9AM
-    - cron: '37 13 1 * *'
+    # At 13:37 on day-of-month 7.
+    - cron: '37 13 7 * *'
 
 jobs:
   release:
