--- a/package.json
+++ b/package.json
@@ -75,13 +75,13 @@
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@vscode/test-web": "^0.0.44",
+    "@vscode/vsce": "^2.19.0",
     "assert": "^2.0.0",
     "eslint": "^8.45.0",
     "mocha": "^10.2.0",
     "process": "^0.11.10",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
-    "vsce": "^2.15.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
