--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "deploy": "vsce publish --allow-star-activation",
     "compile-web": "webpack --mode production",
     "watch-web": "webpack --mode development --watch",
-    "run-in-browser": "vscode-test-web --extensionId=vscode.git --browserType=chromium --extensionDevelopmentPath=. ."
+    "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. ."
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
