Once again trying to get it working on the web (#451)
* I know, I know, this is not how I’m supposed to do it, but I can't think of something better.

* Refactor webpack import to use default import for consistency

* Update .vscodeignore to include eslint.config.mjs and remove tslint.json

* Moving to GitHub Actions

Signed-off-by: Lasse Gaardsholt <lasse.gaardsholt@bestseller.com>

* Rename release job to build in GitHub Actions workflow

Signed-off-by: Lasse Gaardsholt <lasse.gaardsholt@bestseller.com>

---------

Signed-off-by: Lasse Gaardsholt <lasse.gaardsholt@bestseller.com>

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,12 @@
 .vscode/**
 .vscode-test/**
-out/test/**
-out/**/*.map
+.github/**
 src/**
+node_modules/**
 .gitignore
+webpack.config.js
 tsconfig.json
-**/*.ts
-**/tsconfig.json
-**/tslint.json
-.circleci/**
+.eslintrc.json
+**/*.map
+.circleci
+eslint.config.mjs
