--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,7 @@ updates:
       eslint:
         patterns:
         - "@typescript-eslint/*"
+        - "typescript-eslint"
         - "eslint"
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
