revert this part
Signed-off-by: Lasse Gaardsholt <lasse.gaardsholt@bestseller.com>

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         {
           "command": "wtc.getCommitMessage",
           "group": "navigation@9",
-          "when": "scmProvider == 'git'"
+          "when": "scmProvider == git"
         }
       ]
     },
